refactor min & max